<resources>
    <string name="app_name">Giannelli</string>
    <string name="name">Name</string>
    <string name="txtBtnClear">Clear</string>
    <string name="txtBtnApply">Apply</string>
    <string name="txtWriteHere">Write here</string>
    <string name="txtEmpty">- empty -</string>
    <string name="txtHelloWorld">Hello World!</string>
    <string name="txtChooseSubject">Choose a subject</string>
    <string name="txtExNumber">Number of exercises planned</string>
    <string name="txtSubjectGrade">%1$s Grade</string>
    <string name="txtWrTsk">Written task grade (/24)</string>
    <string name="txtOralTsk">Oral task grade (/6)</string>
    <string name="txtExerTsk">Grade of %1$s %2$s (/3)</string>
    <string name="txtFinalGrade">Final Grade:</string>
    <string name="txtBtnBack">Back</string>
    <string name="txtMainActivity">Main Activity</string>
    <string name="txtSecondActivity">Second Activity</string>
    <string name="txtClock">Clock</string>
    <string name="txtAlarm">Alarm</string>
    <string name="txtContacts">Contacts</string>
    <string name="txtInsertAlarm">Insert alarm time:</string>
    <string name="txtInsertHour">Insert hour</string>
    <string name="txtInsertMinutes">Insert minutes</string>
    <string name="txtSetAlarm">Set Alarm</string>
    <string name="txtAlarmSet">Alarm set at %1$s:%2$s</string>
    <string name="txtInsertTime">Insert hour and minutes</string>
    <string name="txtMotto">Motto</string>
    <string name="txtName">Name</string>
    <string name="txtSurname">Surname</string>
    <string name="txtBirth">Birth Date</string>
    <string name="txtWebsite">Website</string>
    <string name="txtCellphone">Cellphone</string>
    <string name="txtEmail">Email</string>
    <string name="txtGender">Gender</string>
    <string name="txtExamsDone">Exams Done</string>
    <string name="txtTodoExams">To-Do Exams</string>
    <string name="txtAverage">Average</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtSensors">Sensors</string>
    <string name="txtModify">Modify</string>
    <string name="txtClear">Clear</string>
    <string name="txtStudent">Student</string>
    <plurals name="numberOfExercises">
        <item quantity="one">Exercise</item>
        <item quantity="other">Exercises</item>
    </plurals>
    <string name="title_sensor_list">Sensors</string>
    <string name="title_sensor_detail">Sensor Detail</string>
    <string name="txtSuccessSave">Successfully saved on %1$s</string>
    <string name="txtEsamiSvolti">Exams Done</string>
    <string name="txtSave">Save</string>
    <string name="txtExams">Exams</string>
    <string name="txtExamsList">Exams List</string>
    <string name="txtStats">Stats</string>
    <string name="txtArchitettura">Architettura degli Elaboratori e SO</string>
    <string name="txtMatematicaDiscreta">Matematica Discreta</string>
    <string name="txtProgrammazione">Programmazione</string>
    <string name="txtAnalisiMatematica">Analisi Matematica</string>
    <string name="txtLinguaggiDiProgrammazione">Linguaggi di Programmazione</string>
    <string name="txtLaboratorioDiInformatica">Laboratorio di Informatica</string>
    <string name="txtLinguaInglese">Lingua Inglese</string>
    <string name="txtProgrammazione2">Programmazione 2</string>
    <string name="txtProgettazioneDiBasiDiDati">Progettazione di Basi di Dati</string>
    <string name="txtCalcoloNumerico">Calcolo Numerico</string>
    <string name="txtRetiDiCalcolatori">Reti di Calcolatori</string>
    <string name="txtIngegneriaDelSoftware">Ingegneria del Software</string>
    <string name="txtFisicaApplicataAllInformatica">Fisica applicata all\'Informatica</string>
    <string name="txtStatisticaPerLIngegneriaDelSoftware">Statistica per l\'Ingegneria del Software</string>
    <string name="txtEconomiaEGestioneDImpresa">Economia e Gestione d\'Impresa</string>
    <string name="txtModelliEMetodi">Modelli e Metodi</string>
    <string name="txtIntegrazioneETest">Integrazione e Test</string>
    <string name="txtProgettazioneEInterazioneConLUtente">Progettazione e Interazione con l\'Utente</string>
    <string name="txtSviluppoDiMobileSoftware">Sviluppo di Mobile Software</string>
    <string name="txtDataMining">Data Mining</string>
    <string name="txtSistemiInformativi">Sistemi Informativi</string>
    <string name="txtDidattica">Didattica</string>
    <string name="txtCorso">Informatica e T.P.S.</string>
    <string name="txtTvMediaAritmetica">Math Average: %1$s</string>
    <string name="txtTvMediaPonderata">Ponderate Average: %1$s</string>
    <string name="txtTvVotoDiLaurea">Graduation Base: %1$s</string>
    <string name="txtIsEnabled">Enabled</string>
    <string name="txtIsVisible">Visible</string>
    <string name="txtListBluetoothDevices">List of near Bluetooth Devices:</string>
    <string name="txtListPairedDevices">List of near Paired Devices:</string>
    <string name="txtScan">Scan</string>
    <string name="txtShow">Show</string>
    <string name="txtBluetoothNotSupported">Bluetooth not supported</string>
    <string name="txtBNSDescription">You\'ll be returned to student screen</string>
    <string name="txtOk">OK</string>
    <string name="txtConnectionOk">Connection Estabilished</string>
    <string name="txtBetterAverage">Your friend has better average!</string>
    <string name="txtYourFriend">Your friend\'s average: %1$s</string>
    <string name="txtYourAverage">Your average: </string>
    <string name="txtInsert">Insert</string>
    <string name="txtSend">Send</string>
    <string name="txtCFUArchitettura">9</string>
    <string name="txtCFUMatematicaDiscreta">9</string>
    <string name="txtCFUProgrammazione">9</string>
    <string name="txtCFUAnalisiMatematica">9</string>
    <string name="txtCFULinguaggiDiProgrammazione">9</string>
    <string name="txtCFULaboratorioDiInformatica">9</string>
    <string name="txtCFULinguaInglese">0</string>
    <string name="txtCFUProgrammazione2">9</string>
    <string name="txtCFUProgettazioneDiBasiDiDati">9</string>
    <string name="txtCFUCalcoloNumerico">6</string>
    <string name="txtCFURetiDiCalcolatori">9</string>
    <string name="txtCFUIngegneriaDelSoftware">12</string>
    <string name="txtCFUFisicaApplicataAllInformatica">6</string>
    <string name="txtCFUStatisticaPerLIngegneriaDelSoftware">6</string>
    <string name="txtCFUEconomiaEGestioneDImpresa">6</string>
    <string name="txtCFUModelliEMetodi">9</string>
    <string name="txtCFUIntegrazioneETest">6</string>
    <string name="txtCFUProgettazioneEInterazioneConLUtente">6</string>
    <string name="txtCFUSviluppoDiMobileSoftware">9</string>
    <string name="txtCFUDataMining">9</string>
    <string name="txtCFUSistemiInformativi">6</string>
    <string name="txtCFUDidattica">6</string>
    <string name="txtAnnoArchitettura">1</string>
    <string name="txtAnnoMatematicaDiscreta">1</string>
    <string name="txtAnnoProgrammazione">1</string>
    <string name="txtAnnoAnalisiMatematica">1</string>
    <string name="txtAnnoLinguaggiDiProgrammazione">1</string>
    <string name="txtAnnoLaboratorioDiInformatica">1</string>
    <string name="txtAnnoLinguaInglese">1</string>
    <string name="txtAnnoProgrammazione2">2</string>
    <string name="txtAnnoProgettazioneDiBasiDiDati">2</string>
    <string name="txtAnnoCalcoloNumerico">2</string>
    <string name="txtAnnoRetiDiCalcolatori">2</string>
    <string name="txtAnnoIngegneriaDelSoftware">2</string>
    <string name="txtAnnoFisicaApplicataAllInformatica">2</string>
    <string name="txtAnnoStatisticaPerLIngegneriaDelSoftware">2</string>
    <string name="txtAnnoEconomiaEGestioneDImpresa">2</string>
    <string name="txtAnnoModelliEMetodi">3</string>
    <string name="txtAnnoIntegrazioneETest">3</string>
    <string name="txtAnnoProgettazioneEInterazioneConLUtente">3</string>
    <string name="txtAnnoSviluppoDiMobileSoftware">3</string>
    <string name="txtAnnoDataMining">3</string>
    <string name="txtAnnoSistemiInformativi">3</string>
    <string name="txtAnnoDidattica">3</string>
    <string name="txtSemestreArchitettura">1</string>
    <string name="txtSemestreMatematicaDiscreta">1</string>
    <string name="txtSemestreProgrammazione">1</string>
    <string name="txtSemestreAnalisiMatematica">2</string>
    <string name="txtSemestreLinguaggiDiProgrammazione">2</string>
    <string name="txtSemestreLaboratorioDiInformatica">2</string>
    <string name="txtSemestreLinguaInglese">2</string>
    <string name="txtSemestreProgrammazione2">1</string>
    <string name="txtSemestreProgettazioneDiBasiDiDati">1</string>
    <string name="txtSemestreCalcoloNumerico">1</string>
    <string name="txtSemestreRetiDiCalcolatori">1</string>
    <string name="txtSemestreIngegneriaDelSoftware">2</string>
    <string name="txtSemestreFisicaApplicataAllInformatica">2</string>
    <string name="txtSemestreStatisticaPerLIngegneriaDelSoftware">2</string>
    <string name="txtSemestreEconomiaEGestioneDImpresa">2</string>
    <string name="txtSemestreModelliEMetodi">1</string>
    <string name="txtSemestreIntegrazioneETest">1</string>
    <string name="txtSemestreProgettazioneEInterazioneConLUtente">1</string>
    <string name="txtSemestreSviluppoDiMobileSoftware">1</string>
    <string name="txtSemestreDataMining">2</string>
    <string name="txtSemestreSistemiInformativi">2</string>
    <string name="txtSemestreDidattica">2</string>
    <string name="txtDoneArchitettura">Architettura degli Elaboratori e SO</string>
    <string name="txtDoneMatematicaDiscreta">Matematica Discreta</string>
    <string name="txtDoneProgrammazione">Programmazione</string>
    <string name="txtDoneAnalisiMatematica">Analisi Matematica</string>
    <string name="txtDateArchitettura">27/02/2016</string>
    <string name="txtDateMatematicaDiscreta">21/02/2016</string>
    <string name="txtDateProgrammazione">13/01/2016</string>
    <string name="txtDateAnalisiMatematica">16/04/2017</string>
    <string name="txtGradeArchitettura">24</string>
    <string name="txtGradeMatematicaDiscreta">26</string>
    <string name="txtGradeProgrammazione">22</string>
    <string name="txtGradeAnalisiMatematica">28</string>
    <string name="txtBluetooth">Bluetooth</string>
    <string name="txtCannonApp">Cannon App</string>
    <string name="txtFavouriteResearch">Favourite Research</string>
    <string name="txtFlagQuiz">Flag Quiz</string>
    <string name="txtSnake">Snake</string>
    <string name="choices">Select Number of Choices</string>
    <string name="correct">correct</string>
    <string name="flag">Flag</string>
    <string name="guess_country">Guess the Country</string>
    <string name="guesses">guesses</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="more_regions_title">More Regions Required</string>
    <string name="more_regions_message">There are not enough countries in
      the selected regions. Please select more regions.</string>
    <string name="of">of</string>
    <string name="ok">OK</string>
    <string name="question">Question</string>
    <string name="quiz_title">Ten Question Flag Quiz</string>
    <string name="regions">Select Regions</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="txtFlagActivity">Flag Game</string>
    <string-array name="regionsList">
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North_America</item>
        <item>Oceania</item>
        <item>South_America</item>
    </string-array>
    <string-array name="guessesList">
        <item>3</item>
        <item>6</item>
        <item>9</item>
    </string-array>
    <string name="results_format">
      Shots fired: %1$d\nTotal time: %2$.1f</string>
    <string name="reset_game">Reset Game</string>
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
</resources>